# lakehouse-storage-engine

./: .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Milestones/: M1.md
src/lakehouse/: errors.py
src/lakehouse/parquet/: io.py
src/lakehouse/protocol/: actions.py  log.py  paths.py
src/lakehouse/storage/: base.py  local.py  s3.py
tests/: conftest.py  test_commit_zero.py  test_parquet_stats.py  test_storage_local.py
