[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse_storage_engine"
version = "0.1.0"

dependencies = [
    "pytest",
    "pyarrow",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Specifies the directory where pytest looks for tests
testpaths = ["tests"]

# Ensures pytest can import your application modules without custom export commands
pythonpath = ["src"]